--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://teresabat.github.io/portfolio-dev/styles/index.css"
+    />
     <title>Projeto Portfolio</title>
   </head>
   <body>
