--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
+      href="https://teresabat.github.io/portfolio-dev/styles/footer.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://teresabat.github.io/portfolio-dev/styles/global.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://teresabat.github.io/portfolio-dev/styles/header.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://teresabat.github.io/portfolio-dev/styles/index.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://teresabat.github.io/portfolio-dev/styles/main.css"
     />
     <title>Projeto Portfolio</title>
   </head>
